# ireland_property_market_backend

./: .gitignore  README.md  config.py  database.py  dependencies.py  dump_and_upload.py  main.py  models.py  pyproject.toml
api/: cache.py  schemas.py
api/routes/: address.py  map.py  properties.py  statistics.py  upload.py
api/services/: bing_geocoder.py  clustering.py  daft_scraper.py  heatmap.py  map_clustering.py  ppr_csv_parser.py  property_filtering.py  statistics.py
scripts/: update_ppr.py
tests/: __init__.py  conftest.py  test_ppr_csv_parser.py  test_upload.py
